objects/FERPA_Release__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FERPA Releases</relationshipLabel>
        <relationshipName>FERPA_Releases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Release_Academic_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Academic Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Release_Financial_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Financial Aid</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Release_House_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release House Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Release_Tuition_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Tuition Bill</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>5</length>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>FERPA Release</label><nameField>
        <label>FERPA Release Name</label>
        <type>Text</type>
    </nameField><pluralLabel>FERPA Releases</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>